# AM_CXXFLAGS = -I../../ $(BOOST_CPPFLAGS)
# AM_LDFLAGS = $(BOOST_LDFLAGS)

bin_PROGRAMS = winLNKViewer
winLNKViewer_SOURCES = winLNKViewer.cpp
winLNKViewer_CXXFLAGS = $(POPT_CFLAGS) -I../../
winLNKViewer_LDADD = $(POPT_LIBS) ../../libtimeUtils/src/libtimeUtils.a ../../libWinLNK/src/libWinLNK.a ../../libbinData/src/libbinData.a

